# claude-parallel-workers

./: .gitignore  ARCHITECTURE_REVISED.md  ARCHITECTURE_UNDERSTANDING.md  ARCHITECTURE_V2.md  IMPLEMENTATION_PLAN.md  README.md  RESEARCH_FINDINGS.md  codex_review_prompt.md  gemini_critical_prompt.md  gemini_debate.md  gemini_review_prompt.md  pyproject.toml  requirements.txt
docs/: HOOK_TYPES_ANALYSIS.md
docs/research/: A Deep-Dive Analysis of Claude-Centric AI Agent Orchestration Frameworks.md  claude-flow-findings.md  investigation-requests.md  parallel-frameworks-analysis.md  swarm-sdk-findings.md  synthesis-and-recommendations.md
examples/: tasks.yaml  test_orchestrator.py
hooks/: post_tool_use.py  pre_tool_use.py  stop.py  user_prompt_submit.py
orchestrator/: orchestrator.py
shared/: __init__.py  event_store.py  event_store_v2.py  models.py  utils.py
worker/: worker.py
