[project]
name = "claude-parallel-hooks"
version = "0.1.0"
description = "Parallel execution framework for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.0",
    "black>=25.12.0",
    "pylint>=4.0.0",
    "mypy>=1.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
